fix vertical alignment

--- a/htdocs/t/shop/shop.css
+++ b/htdocs/t/shop/shop.css
@@ -89,6 +89,7 @@ html.msie-8 #map .point .title { filter: alpha(opacity=85); }
 	padding-left: 35px;
 	white-space: nowrap;
 	border-radius: 0 0 4px 4px;
+	line-height: 54px;
 }
 #promo .info > div {
 	display: inline-block;
